2007-02-27  Jonathan Pobst  <monkey@jpobst.com>

	* RadioButton.cs: Implement 2.0 event.
	* RelatedImageListAttribute.cs: Implement new class.

2007-02-27  Everaldo Canuto  <everaldo@simios.org>

	* MenuAPI.cs: Change keynav_state before call SelectItem. Fixes #80901.

2007-02-27  Jonathan Pobst  <monkey@jpobst.com>

	* CheckBox.cs: Implement 2.0 functionality.

2007-02-27  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* ListView.cs: Refactor Add and AddRange methods of
	ListViewItemCollection, to not update the ListView
	everytime an item is added in AddRange. Also move the update
	code to a new CollectionChanged method, and call it
	from other methods that need it as well (this should also fix some
	bugs when Sorting is used).

2007-02-27  Jackson Harper  <jackson@ximian.com>

	* TextControl.cs: Try to never let the caret stay in a non-text
	tag.
	* TextBoxBase.cs: Update the caret.

2007-02-26  Jonathan Pobst  <monkey@jpobst.com>

	* XplatUIStructs.cs: Add some convenience methods for POINT structure.
	* XplatUIWin32.cs: Add some convenience methods for RECT structure,
	delete POINT structure, duplicate of one in XplatUIStructs.
	* TextRenderer.cs: Use XplatUIWin32.RECT instead of UXTheme.RECT.

2007-02-26  Gert Driesen  <drieseng@users.sourceforge.net>

	* ListView.cs: Initialize LabelEditEventArgs after setting Text of
	edit box since otherwise the Label would immediately be set (even if
	the user did not modify the label). In OnKeyDown set Handled to true
	if Return or Escape was pressed. In ColumnHeaderCollection unlink
	columns that are to be removed. In ListViewItemCollection unlink items
	that are to be removed.

2007-02-24  Jonathan Pobst  <monkey@jpobst.com>

	* TextRenderer.cs: If we set a GDI clip region, we need to clear
	it when we are done.  [Fixes bug #80949]

2007-02-23  Jonathan Pobst  <monkey@jpobst.com>

	* Form.cs: Wrap checking ShowWithoutActivation in a NET_2_0 block.

2007-02-23  Carlos Alberto Cortez <calberto.cortez@gmail.com>
